small appheader gap fix

--- a/css/cmps/app-header.css
+++ b/css/cmps/app-header.css
@@ -2,7 +2,6 @@
     transition: background-color .5s, border .5s;
     width: 100%;
     z-index: 1;
-    gap: 30px;
     min-height: 70px;
 }
 
